--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>Coursesite</title>
   <base href="/">
 
+  <link href="//amp.azure.net/libs/amp/2.2.2/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+<script src="//amp.azure.net/libs/amp/2.2.2/azuremediaplayer.min.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
